Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignIntegerNumObj.quorum
class Main
    action Main
        Number v
        v:SetValue(5.0)
        Test(v)
    end

    action Test(integer var)
        if var = 5
            output "passed"
        end
    end
end
