Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumObjNumber.quorum
class Main
    action Main
        Number v
        v:SetValue(Test())
    end

    action Test() returns Number
        number var = 5.0
        return var
    end
end